--- a/src/view/styling/component_style/layout_items.scss
+++ b/src/view/styling/component_style/layout_items.scss
@@ -1,5 +1,29 @@
 @import '../colors.scss';
 
+.nav-menu {
+    padding: 0%;
+    margin: 0%;
+
+    .nav-item {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Inter', sans-serif; 
+        font-weight: bold;
+        font-size: 1.2em;
+        transition: 0.3s ease;
+
+        &:hover {
+            background-color: $accent;
+            font-size: 1.34em;
+            transform: scale3d(1.05, 1.05, 1.05);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+        }
+    }
+}
+
 .sidebar-container {
     display: flex;
     grid-column: 1;
@@ -23,29 +47,58 @@
             justify-content: center;
             font-size: 2em;
         }
+    }
+}
+
+.mobile-nav-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    pointer-events: none;
+}
+
+
+.mobile-nav {
+    position: fixed;
+    box-sizing: border-box;
+    top: 10px;
+    left: 10px;
+    overflow: hidden;
+    z-index: 2;
+    pointer-events: auto;
+
+    .nav-toggle {
+        margin: 10px;
+        color: $accent2;
+        text-decoration: none;
+        font-size: 30px;
+        appearance: none;
+        align-items: center;
+        justify-content: center;
+        border: 0;
+        padding: 0;
+        background-color: transparent;
+        border-radius: 50%;
+    }
+
+    .nav-closed {
+        display: none;
+    }
+
+    .nav-open {
+        display: flex;
+        flex-direction: column;
 
         .nav-menu {
-            padding: 0%;
-            margin: 0%;
-
-            .nav-item {
-                width: 100%;
-                height: 50px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-family: 'Inter', sans-serif; 
-                font-weight: bold;
-                font-size: 1.2em;
-                transition: 0.3s ease;
-
-                &:hover {
-                    background-color: $accent;
-                    font-size: 1.34em;
-                    transform: scale3d(1.05, 1.05, 1.05);
-                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-                }
-            }
+            display: flex;
+            flex-direction: column;
+            background-color: $secondary;
+            padding: 10px;
+            border-radius: 15px;
         }
     }
 }
@@ -59,6 +112,9 @@
 
     .copyright {
         text-align: left;
+        @media (max-width: 1024px) {
+            text-align: center;
+        }
     }
 
     .socials {
