--- a/src/view/styling/main.scss
+++ b/src/view/styling/main.scss
@@ -1,36 +1,43 @@
 // src\view\styling\main.scss
 
 @import './colors.scss';
+@import './component_style/displaycards.scss';
 @import './component_style/layout_items.scss';
+@import './page_styling/pages.scss';
 
 body {
     margin: 0;
 }
 
 .app {
-    display: grid;
-    grid-template-columns: minmax(240px, 15%) 1fr;
     color: #fff;
     font-family: 'Roboto', sans-serif;
+    z-index: 0;
     min-height: 100vh;
+    width: 100vw;
+    overflow: hidden;
     h1, h2, h3, h4, h5, h6 {
         font-family: 'Inter', sans-serif;
-        font-weight: bold;
-        
+        font-weight: bold; 
+    }
+
+    .app-desktop {
+        display: grid;
+        grid-template-columns: minmax(240px, 15%) 1fr;
+        height: 100%;
+    }
+
+    .app-mobile {
+        display: inline;
+        position: relative;
+        z-index: 1;
+        height: 100%;
+        font-size: 0.9rem;
     }
 
     a {
         text-decoration: none;
         color: inherit;
-    }
-
-    .pages {
-        display: grid;
-        grid-template-rows: 1fr auto;
-        grid-column: 2;
-        background-color: $primary;
-        text-align: center;
-        width: 100%;
     }
 
 }
