--- a/src/view/styling/component_style/layout_items.scss
+++ b/src/view/styling/component_style/layout_items.scss
@@ -12,7 +12,7 @@
         justify-content: center;
         font-family: 'Inter', sans-serif; 
         font-weight: bold;
-        font-size: 1.2em;
+        font-size: 1.15em;
         transition: 0.3s ease;
 
         &:hover {
@@ -72,17 +72,19 @@
     pointer-events: auto;
 
     .nav-toggle {
-        margin: 10px;
         color: $accent2;
         text-decoration: none;
         font-size: 30px;
+        width: 40px;
+        height: 40px;           
         appearance: none;
         align-items: center;
         justify-content: center;
-        border: 0;
+        border: 1px solid rgba(black, 0.300);
         padding: 0;
-        background-color: transparent;
+        background-color: rgba(black, 0.274);
         border-radius: 50%;
+
     }
 
     .nav-closed {
@@ -108,6 +110,10 @@
     flex-direction: column;
     grid-row: 2;
     background-color: $secondary;
+
+    @media (max-width: 1024px) {
+        grid-row: 3;
+    }
 
 
     .copyright {
