--- a/src/view/styling/main.scss
+++ b/src/view/styling/main.scss
@@ -3,6 +3,7 @@
 @import './colors.scss';
 @import './component_style/displaycards.scss';
 @import './component_style/layout_items.scss';
+@import './component_style/carousel.scss';
 @import './page_styling/pages.scss';
 
 body {
@@ -12,9 +13,7 @@ body {
 .app {
     color: #fff;
     font-family: 'Roboto', sans-serif;
-    z-index: 0;
     min-height: 100vh;
-    width: 100vw;
     overflow: hidden;
     h1, h2, h3, h4, h5, h6 {
         font-family: 'Inter', sans-serif;
@@ -30,7 +29,6 @@ body {
     .app-mobile {
         display: inline;
         position: relative;
-        z-index: 1;
         height: 100%;
         font-size: 0.9rem;
     }
